--- a/web-programming/quiz-1/quiz1/html/hometown.html
+++ b/web-programming/quiz-1/quiz1/html/hometown.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 
-  <!-- Start of Hero -->
+    <!-- Start of Hero -->
 
     <div class="relative z-20 bg-[#5b92e5] pt-12">
         <div class="absolute inset-x-0 bottom-0">
@@ -40,24 +40,21 @@
         </div>
         <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
           <div class="relative max-w-2xl sm:mx-auto sm:max-w-xl md:max-w-2xl text-center">
-            <h2 class="mb-6 font-sans text-3xl font-bold tracking-tight text-white sm:text-4xl sm:leading-none">
+            <h2 class="mb-6 text-3xl font-bold tracking-tight text-white sm:text-4xl sm:leading-none">
               Welcome <br class="block md:hidden" />
               to My
               <span class="relative inline-block">
-                Homepage
+                Hometown
                 <div class="w-full h-3 -mt-3 bg-yellow-500"></div>
               </span>
             </h2>
             <p class="mb-6 text-base font-thin tracking-wide text-gray-100 md:text-2xl">
-              Mohammed Fachry Dwi Handoko
-            </p>
-            <p class="max-w-md mb-10 text-xs font-thin tracking-wide text-gray-100 sm:text-sm sm:mx-auto md:mb-16">
-              Department of Informatics <span class="px-2"> | </span> 2020 ~ 5025201159
+              This is where I live in now  :p
             </p>
             <a
               href="/"
               aria-label="Scroll down"
-              class="flex items-center justify-center w-10 h-10 mx-auto text-white duration-300 transform border border-gray-100 rounded-full hover:text-teal-accent-400 hover:border-teal-accent-400 hover:shadow hover:scale-150"
+              class="flex mt-20 items-center justify-center w-10 h-10 mx-auto text-white duration-300 transform border border-gray-100 rounded-full hover:text-teal-accent-400 hover:border-teal-accent-400 hover:shadow hover:scale-150"
             >
               <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="currentColor">
                 <path d="M10.293,3.293,6,7.586,1.707,3.293A1,1,0,0,0,.293,4.707l5,5a1,1,0,0,0,1.414,0l5-5a1,1,0,1,0-1.414-1.414Z"></path>
@@ -72,11 +69,11 @@
     <!-- Start of Navbar -->
 
     <nav class="fixed z-50 top-0 left-0 w-full h-[60px] flex align-middle justify-center py-3 bg-[#5b92e5] shadow-md">
-      <div class="text-gray-100 font-thin md:space-x-16">
-        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Home </a>
-        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Profile </a>
-        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200 font-bold text-yellow-600" href="/hometown.html"> Hometown </a>
-        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Tourist </a>
+      <div class="text-white font-thin md:space-x-16">
+        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200 sm:mr-96" href="index.html"> Log Out </a>
+        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="profile.html"> Profile </a>
+        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200 font-bold text-yellow-400" href="hometown.html"> Hometown </a>
+        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="tourist.html"> Tourist </a>
       </div>
     </nav>
 
@@ -84,20 +81,18 @@
 
     <!-- Start of Main Parallax Section -->
 
-    <section class="banner max-w-full relative z-10 flex flex-col sm:flex-row justify-center align-middle items-center h-screen md:h-[300px] p-32 sm:pt-40 text-left gap-[30px] sm:gap-14 mt-14">
+    <section class="banner max-w-full relative z-10 flex flex-col sm:flex-row justify-center align-middle items-center h-screen md:h-[300px] p-32 sm:pt-40 text-left gap-[30px] mt-14">
       <div class="text-gray-900 sm:pb-32">
         <h2 class="font-bold text-4xl"> Take A Peek </h2>
         <p class="pt-4 font-thin text-lg">
-          Born in Jakarta, lived outside my whole life as an expatriate.
-          <br />
-          <br />
-          Germany. Saudi Arabia, and Malaysia my whole life.
+          Born in Jakarta, lived outside my whole life as an expatriate - in
+          Germany. Saudi Arabia, and Malaysia - my whole life.
         </p>
       </div>
-      <img src="../assets/images/bekasi-pyramid.png" alt="space" class="w-[600px] h-[600px]" />
+      <img src="../assets/images/bekasi-pyramid.png" alt="space" class="max-w-full h-full sm:w-[600px] sm:h-[400px] relative z-10" />
     </section>
     <section class="pt-40 pb-32 relative">
-        <div class="absolute w-full h-screen top-0 left-0 bg-cover bg-center bg-no-repeat bg-fixed" style="background-image:url(../assets/images/summarecon-bekasi.jpg)">
+        <div class="absolute w-full h-screen top-0 left-0 bg-cover bg-center bg-no-repeat bg-fixed bg-[url('../assets/images/summarecon-bekasi.jpg')]">
           <div class="absolute w-full h-screen top-0 left-0 bg-blue-600/30"></div>
         </div>
         <h1 class="text-gray-100 text-4xl md:text-6xl display-2 text-center relative">
