--- a/web-programming/quiz-1/quiz1/html/tourist.html
+++ b/web-programming/quiz-1/quiz1/html/tourist.html
@@ -1,1 +1,82 @@
-ECHO is on.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Q-1 | 5025201159 </title>
+    <link rel="stylesheet" href="../styles/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+                unn: '#5b92e5',
+                mcrn: '#6A180F',
+              }
+            }
+          }
+        }
+    </script>
+    <style type="text/tailwindcss">
+        @layer utilities {
+            .content-auto {
+                content-visibility: auto;
+            }
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Start of Login -->
+
+    <div class="min-h-screen bg-gray-100 py-6 flex flex-col justify-center text-center sm:text-left sm:py-12">
+      <div class="relative py-3 sm:max-w-xl sm:mx-auto">
+        <div
+          class="absolute inset-0 bg-gradient-to-r from-blue-300 to-blue-600 shadow-lg transform -skew-y-6 sm:skew-y-0 sm:-rotate-6 sm:rounded-3xl">
+        </div>
+        <div class="relative px-4 py-10 bg-white shadow-lg sm:rounded-3xl sm:p-20">
+          <div class="max-w-md mx-auto">
+            <div>
+              <h1 class="text-2xl font-semibold"> Mohammed Fachry Dwi Handoko </h1>
+            </div>
+            <div class="divide-y divide-gray-200">
+              <div class="py-8 text-base leading-6 space-y-8 text-gray-700 sm:text-lg sm:leading-7">
+                <div class="relative">
+                  <h1 class="text-2xl font-semibold"> 5 0 2 5 2 0 1 1 5 9 </h1>
+                </div>
+                <div class="relative">
+                  <h3 class="text-xl font-thin"> Informatics 2020 </h3>
+                </div>
+                <div class="relative">
+                  <a href="profile.html">
+                    <button class="bg-blue-500 hover:scale-120 hover:transition-all hover:text-blue-200 text-gray-100 rounded-md px-6 py-2"> Get to Know Me </button>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- End of Login -->
+
+      <!-- Start of Navbar -->
+
+      <nav class="fixed z-50 top-0 left-0 w-full h-[60px] flex align-middle justify-center py-3 bg-[#5b92e5] shadow-md">
+        <div class="text-white font-thin md:space-x-16">
+          <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200 sm:mr-96" href="index.html"> Log Out </a>
+          <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="profile.html"> Profile </a>
+          <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="hometown.html"> Hometown </a>
+          <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200 font-bold text-yellow-400" href="tourist.html"> Tourist </a>
+        </div>
+      </nav>
+  
+      <!-- End of Navbar -->
+
+</body>
+<script src="../scripts/main.js"></script>
+</html>
